--- a/styles/main.scss
+++ b/styles/main.scss
@@ -59,9 +59,13 @@ label {
 
 img {
   width: 100%;
-  border: 10px solid white;
+  // border: 10px solid white;
   top: 0;
   left: 0;
+}
+
+section {
+  height: 100%;
 }
 
 .fix-nav {
